app-in-namespace/pacman-01/01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pacman-01-argocd
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    argocd.argoproj.io/managed-by: pacman-01-argocd
  name: pacman-01-dev-01
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    argocd.argoproj.io/managed-by: pacman-01-argocd
  name: pacman-01-dev-02
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    argocd.argoproj.io/managed-by: pacman-01-argocd
  name: pacman-01-dev-03
