app-in-namespace/pacman-01/07-as-hub-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pacman-01-argocd
